@@ -69,6 +69,9 @@ public class MyFacesConfig
     private static final String PARAM_disableJspParser = "myfaces_DisableJspParser";
     private static final boolean DEFAULT_disableJspParser = false;
 
+    private static final String PARAM_defaultLanguage = "myfaces_DefaultLanguage";
+    private static final String DEFAULT_defaultLanguage = "en";
+
     private static final String CONFIG_MAP_ATTR = MyFacesConfig.class.getName() + ".MAP";
 
 
@@ -210,6 +213,15 @@ public class MyFacesConfig
     }
 
 
+    /**
+     * See web.xml in the examples webapp for documentation!
+     */
+    public static String getDefaultLanguage(ServletContext servletContext)
+    {
+        return getStringInitParameter(servletContext,
+                                      PARAM_defaultLanguage,
+                                      DEFAULT_defaultLanguage);
+    }
 
 
 
